Implement instruction endpoints. Small restructuring
