# internal/endpoints/RecipeEndpoints.go
@@ -9,12 +9,16 @@ import (
 type RecipeHandlers interface {
 	GetAll(w http.ResponseWriter, r *http.Request)
 	Get(w http.ResponseWriter, r *http.Request, recipeID string)
-	GetInstruction(w http.ResponseWriter, r *http.Request, recipeID string)
 	Create(w http.ResponseWriter, r *http.Request)
-	CreateInstruction(w http.ResponseWriter, r *http.Request)
+	Update(w http.ResponseWriter, r *http.Request, recipeID string)
+	Delete(w http.ResponseWriter, r *http.Request, recipeID string)
+
 	ImageUpload(w http.ResponseWriter, r *http.Request, recipeID string)
-	Update(w http.ResponseWriter, r *http.Request)
-	Delete(w http.ResponseWriter, r *http.Request)
+
+	GetInstruction(w http.ResponseWriter, r *http.Request, recipeID string)
+	CreateInstruction(w http.ResponseWriter, r *http.Request)
+	UpdateInstruction(w http.ResponseWriter, r *http.Request, recipeID string)
+	DeleteInstruction(w http.ResponseWriter, r *http.Request, recipeID string)
 }
 
 type RecipeEndpoints struct {
@@ -25,10 +29,6 @@ func NewRecipeEndpoints(handlers RecipeHandlers) *RecipeEndpoints {
 	return &RecipeEndpoints{
 		handlers: handlers,
 	}
-}
-
-func (e RecipeEndpoints) NotImplemented(ctx *gin.Context) {
-	ctx.AbortWithStatusJSON(501, "not implemented")
 }
 
 // @Summary		Get a list of all available recipes
@@ -59,20 +59,6 @@ func (e RecipeEndpoints) Get(ctx *gin.Context) {
 	e.handlers.Get(ctx.Writer, ctx.Request, ctx.Param("id"))
 }
 
-// @Summary		Get a recipe's instruction text
-// @Description	Returns the JSON object of the recipe's instructions
-// @tags			recipes
-// @Produce		json
-// @Param			id			path		int				true	"Recipe ID"
-// @Success		200			{object}	models.Instruction
-// @Failure		401			{string}	string	"unauthorized"
-// @Failure		404			{string}	string	"not found"
-// @Failure		500			{string}	string	"Any error"
-// @Router			/recipe/{id}/instruction [get]
-func (e RecipeEndpoints) GetInstruction(ctx *gin.Context) {
-	e.handlers.GetInstruction(ctx.Writer, ctx.Request, ctx.Param("id"))
-}
-
 // @Summary		Create a recipe
 // @Description	Creates a new recipe and returns a JSON object of the created recipe
 // @tags			recipes
@@ -86,6 +72,66 @@ func (e RecipeEndpoints) GetInstruction(ctx *gin.Context) {
 // @Router			/recipe [post]
 func (e RecipeEndpoints) Create(ctx *gin.Context) {
 	e.handlers.Create(ctx.Writer, ctx.Request)
+}
+
+// @Summary		Update a recipe
+// @Description	Updates a single recipe and return the JSON object of the updated recipe
+// @Tags			recipes
+// @Accept		json
+// @Produce		json
+// @Param			id	path		int	true	"Recipe ID"
+// @Param			requestbody	body		models.Recipe	true	"Update a recipe"
+// @Success		200	{object}	models.Recipe
+// @Failure		401	{string}	string	"unauthorized"
+// @Failure		404	{string}	string	"not found"
+// @Failure		500	{string}	string	"Any error"
+// @Router			/recipe/{id} [put]
+func (e RecipeEndpoints) Update(ctx *gin.Context) {
+	e.handlers.Update(ctx.Writer, ctx.Request, ctx.Param("id"))
+}
+
+// @Summary		Delete a recipe
+// @Description	Deletes a recipe. Returns a simple http status code
+// @Tags			recipes
+// @Produce		json
+// @Param			id	path	int	true	"Recipe ID"
+// @Success		204
+// @Failure		401	{string}	string	"unauthorized"
+// @Failure		404	{string}	string	"not found"
+// @Failure		500	{string}	string	"Any error"
+// @Router			/recipe/{id} [delete]
+func (e RecipeEndpoints) Delete(ctx *gin.Context) {
+	e.handlers.Delete(ctx.Writer, ctx.Request, ctx.Param("id"))
+}
+
+// @Summary		Upload a recipe image
+// @Description	Upload a recipe image used in the frontend. Returns a simple http status code
+// @Tags			recipes
+// @Produce		json
+// @Accept		image/jpeg
+// @Param			id	path	int	true	"Recipe ID"
+// @Success		201
+// @Failure		401	{string}	string	"unauthorized"
+// @Failure		404	{string}	string	"not found"
+// @Failure		500	{string}	string	"Any error"
+// @Router			/recipe/{id}/cover [post]
+func (e RecipeEndpoints) ImageUpload(ctx *gin.Context) {
+	// This is dirty, but I do not want gin awareness beyond the endpoints level
+	e.handlers.ImageUpload(ctx.Writer, ctx.Request, ctx.Param("id"))
+}
+
+// @Summary		Get a recipe's instruction text
+// @Description	Returns the JSON object of the recipe's instructions
+// @tags			recipes
+// @Produce		json
+// @Param			id			path		int				true	"Recipe ID"
+// @Success		200			{object}	models.Instruction
+// @Failure		401			{string}	string	"unauthorized"
+// @Failure		404			{string}	string	"not found"
+// @Failure		500			{string}	string	"Any error"
+// @Router			/recipe/{id}/instruction [get]
+func (e RecipeEndpoints) GetInstruction(ctx *gin.Context) {
+	e.handlers.GetInstruction(ctx.Writer, ctx.Request, ctx.Param("id"))
 }
 
 // @Summary		Create a recipe's instruction text
@@ -104,22 +150,6 @@ func (e RecipeEndpoints) CreateInstruction(ctx *gin.Context) {
 	e.handlers.CreateInstruction(ctx.Writer, ctx.Request)
 }
 
-// @Summary		Update a recipe
-// @Description	Updates a single recipe and return the JSON object of the updated recipe
-// @Tags			recipes
-// @Accept		json
-// @Produce		json
-// @Param			id	path		int	true	"Recipe ID"
-// @Param			requestbody	body		models.Recipe	true	"Update a recipe"
-// @Success		200	{object}	models.Recipe
-// @Failure		401	{string}	string	"unauthorized"
-// @Failure		404	{string}	string	"not found"
-// @Failure		500	{string}	string	"Any error"
-// @Router			/recipe/{id} [put]
-func (e RecipeEndpoints) Update(ctx *gin.Context) {
-	e.handlers.Update(ctx.Writer, ctx.Request)
-}
-
 // @Summary		Update a recipe's instruction text
 // @Description	Updates the instruction text for a recipe and returns the JSON object of the updated instructions
 // @tags			recipes
@@ -133,35 +163,21 @@ func (e RecipeEndpoints) Update(ctx *gin.Context) {
 // @Failure		500	{string}	string	"Any error"
 // @Router			/recipe/{id}/instruction [put]
 func (e RecipeEndpoints) UpdateInstruction(ctx *gin.Context) {
-	e.NotImplemented(ctx)
+	e.handlers.UpdateInstruction(ctx.Writer, ctx.Request, ctx.Param("id"))
 }
 
-// @Summary		Delete a recipe
-// @Description	Deletes a recipe. Returns a simple http status code
-// @Tags			recipes
+// @Summary		delete a recipe's instruction text
+// @Description	Updates the instruction text for a recipe and returns the JSON object of the updated instructions
+// @tags			recipes
+// @Accept		json
 // @Produce		json
-// @Param			id	path	int	true	"Recipe ID"
+// @Param			id	path		int	true	"Recipe ID"
+// @Param			requestbody	body		models.Instruction	true	"Delete an instruction"
 // @Success		204
 // @Failure		401	{string}	string	"unauthorized"
 // @Failure		404	{string}	string	"not found"
 // @Failure		500	{string}	string	"Any error"
-// @Router			/recipe/{id} [delete]
-func (e RecipeEndpoints) Delete(ctx *gin.Context) {
-	e.handlers.Delete(ctx.Writer, ctx.Request)
-}
-
-// @Summary		Upload a recipe image
-// @Description	Upload a recipe image used in the frontend. Returns a simple http status code
-// @Tags			recipes
-// @Produce		json
-// @Accept		image/jpeg
-// @Param			id	path	int	true	"Recipe ID"
-// @Success		201
-// @Failure		401	{string}	string	"unauthorized"
-// @Failure		404	{string}	string	"not found"
-// @Failure		500	{string}	string	"Any error"
-// @Router			/recipe/{id}/cover [post]
-func (e RecipeEndpoints) ImageUpload(ctx *gin.Context) {
-	// This is dirty, but I do not want gin awareness beyond the endpoints level
-	e.handlers.ImageUpload(ctx.Writer, ctx.Request, ctx.Param("id"))
+// @Router			/recipe/{id}/instruction [delete]
+func (e RecipeEndpoints) DeleteInstruction(ctx *gin.Context) {
+	e.handlers.DeleteInstruction(ctx.Writer, ctx.Request, ctx.Param("id"))
 }
