# internal/handlers/RecipeHandlers.go
@@ -11,12 +11,15 @@ import (
 
 type RecipeService interface {
 	FindAll() ([]m.Recipe, error)
-	FindSingle(recipeID int) (m.Recipe, error)
-	FindInstruction(recipeID int) ([]m.Instruction, error)
+	FindSingle(recipeID uint) (m.Recipe, error)
 	Create(recipe m.Recipe) (m.Recipe, error)
-	CreateInstruction(instruction []m.Instruction) ([]m.Instruction, error)
-	Update(recipe m.Recipe) (m.Recipe, error)
-	Delete(recipe m.Recipe) error
+	Update(recipe m.Recipe, recipeID uint) (m.Recipe, error)
+	Delete(recipe m.Recipe, recipeID uint) error
+
+	FindInstruction(recipeID uint) (m.Instruction, error)
+	CreateInstruction(instruction m.Instruction) (m.Instruction, error)
+	UpdateInstruction(instruction m.Instruction, recipeID uint) (m.Instruction, error)
+	DeleteInstruction(instruction m.Instruction, recipeID uint) error
 }
 
 type ImageService interface {
@@ -56,60 +59,17 @@ func (h RecipeHandlers) Get(w http.ResponseWriter, r *http.Request, recipeID str
 
 	rID, err := strconv.Atoi(recipeID)
 	if err != nil {
-		h.utils.response500WithDetails(w, err.Error())
+		h.utils.response500(w)
 		return
 	}
 
-	data, err = h.recipeService.FindSingle(rID)
+	data, err = h.recipeService.FindSingle(uint(rID))
 	if err != nil {
 		h.utils.response500WithDetails(w, err.Error())
 		return
 	}
 
 	h.utils.respondWithJSON(w, http.StatusOK, data)
-}
-
-func (h RecipeHandlers) GetInstruction(w http.ResponseWriter, r *http.Request, recipeID string) {
-	var data []m.Instruction
-
-	rID, err := strconv.Atoi(recipeID)
-	if err != nil {
-		h.utils.response500WithDetails(w, err.Error())
-		return
-	}
-
-	data, err = h.recipeService.FindInstruction(rID)
-	if err != nil {
-		h.utils.response500WithDetails(w, err.Error())
-		return
-	}
-
-	h.utils.respondWithJSON(w, http.StatusOK, data)
-}
-
-func (h RecipeHandlers) CreateInstruction(w http.ResponseWriter, r *http.Request) {
-	var instructions []m.Instruction
-	var data []m.Instruction
-
-	body, err := h.utils.getBody(r.Body)
-	if err != nil {
-		h.utils.response400WithDetails(w, err.Error())
-		return
-	}
-
-	if err = json.Unmarshal(body, &instructions); err != nil {
-		h.utils.response400WithDetails(w, err.Error())
-		return
-	}
-
-	data, err = h.recipeService.CreateInstruction(instructions)
-	if err != nil {
-		h.utils.response500WithDetails(w, err.Error())
-		return
-	}
-
-	h.utils.respondWithJSON(w, http.StatusCreated, data)
-
 }
 
 func (h RecipeHandlers) Create(w http.ResponseWriter, r *http.Request) {
@@ -136,38 +96,15 @@ func (h RecipeHandlers) Create(w http.ResponseWriter, r *http.Request) {
 	h.utils.respondWithJSON(w, http.StatusCreated, data)
 }
 
-func (h RecipeHandlers) ImageUpload(w http.ResponseWriter, r *http.Request, recipeID string) {
+func (h RecipeHandlers) Update(w http.ResponseWriter, r *http.Request, recipeID string) {
+	var recipe m.Recipe
+	var data m.Recipe
 
-	file, _, err := r.FormFile("file")
-	if err != nil {
-		h.utils.response400WithDetails(w, "bad request")
-		return
-	}
-
-	ID, err := strconv.Atoi(recipeID)
+	rID, err := strconv.Atoi(recipeID)
 	if err != nil {
 		h.utils.response500(w)
 		return
 	}
-
-	_, err = h.recipeService.FindSingle(ID)
-	if err != nil {
-		h.utils.response400WithDetails(w, "recipe does not exist")
-		return
-	}
-
-	if s := h.imageService.UploadImage(file, ID); s {
-		h.utils.response201(w)
-		return
-	}
-
-	h.utils.response500(w)
-
-}
-
-func (h RecipeHandlers) Update(w http.ResponseWriter, r *http.Request) {
-	var recipe m.Recipe
-	var data m.Recipe
 
 	body, err := h.utils.getBody(r.Body)
 	if err != nil {
@@ -185,7 +122,7 @@ func (h RecipeHandlers) Update(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	data, err = h.recipeService.Update(recipe)
+	data, err = h.recipeService.Update(recipe, uint(rID))
 	if err != nil {
 		h.utils.response500WithDetails(w, err.Error())
 		return
@@ -194,8 +131,14 @@ func (h RecipeHandlers) Update(w http.ResponseWriter, r *http.Request) {
 	h.utils.respondWithJSON(w, http.StatusOK, data)
 }
 
-func (h RecipeHandlers) Delete(w http.ResponseWriter, r *http.Request) {
+func (h RecipeHandlers) Delete(w http.ResponseWriter, r *http.Request, recipeID string) {
 	var recipe m.Recipe
+
+	rID, err := strconv.Atoi(recipeID)
+	if err != nil {
+		h.utils.response500(w)
+		return
+	}
 
 	body, err := h.utils.getBody(r.Body)
 	if err != nil {
@@ -213,7 +156,136 @@ func (h RecipeHandlers) Delete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	err = h.recipeService.Delete(recipe)
+	err = h.recipeService.Delete(recipe, uint(rID))
+	if err != nil {
+		h.utils.response500WithDetails(w, err.Error())
+		return
+	}
+
+	h.utils.response204(w)
+}
+
+func (h RecipeHandlers) ImageUpload(w http.ResponseWriter, r *http.Request, recipeID string) {
+
+	file, _, err := r.FormFile("file")
+	if err != nil {
+		h.utils.response400WithDetails(w, "bad request")
+		return
+	}
+
+	rID, err := strconv.Atoi(recipeID)
+	if err != nil {
+		h.utils.response500(w)
+		return
+	}
+
+	_, err = h.recipeService.FindSingle(uint(rID))
+	if err != nil {
+		h.utils.response400WithDetails(w, "recipe does not exist")
+		return
+	}
+
+	if s := h.imageService.UploadImage(file, rID); s {
+		h.utils.response201(w)
+		return
+	}
+
+	h.utils.response500(w)
+}
+
+func (h RecipeHandlers) GetInstruction(w http.ResponseWriter, r *http.Request, recipeID string) {
+	var data m.Instruction
+
+	rID, err := strconv.Atoi(recipeID)
+	if err != nil {
+		h.utils.response500(w)
+		return
+	}
+
+	data, err = h.recipeService.FindInstruction(uint(rID))
+	if err != nil {
+		h.utils.response500WithDetails(w, err.Error())
+		return
+	}
+
+	h.utils.respondWithJSON(w, http.StatusOK, data)
+}
+
+func (h RecipeHandlers) CreateInstruction(w http.ResponseWriter, r *http.Request) {
+	var instruction m.Instruction
+	var data m.Instruction
+
+	body, err := h.utils.getBody(r.Body)
+	if err != nil {
+		h.utils.response400WithDetails(w, err.Error())
+		return
+	}
+
+	if err = json.Unmarshal(body, &instruction); err != nil {
+		h.utils.response400WithDetails(w, err.Error())
+		return
+	}
+
+	data, err = h.recipeService.CreateInstruction(instruction)
+	if err != nil {
+		h.utils.response500WithDetails(w, err.Error())
+		return
+	}
+
+	h.utils.respondWithJSON(w, http.StatusCreated, data)
+}
+
+func (h RecipeHandlers) UpdateInstruction(w http.ResponseWriter, r *http.Request, recipeID string) {
+	var instruction m.Instruction
+	var data m.Instruction
+
+	rID, err := strconv.Atoi(recipeID)
+	if err != nil {
+		h.utils.response500(w)
+		return
+	}
+
+	body, err := h.utils.getBody(r.Body)
+	if err != nil {
+		h.utils.response400WithDetails(w, err.Error())
+		return
+	}
+
+	if err = json.Unmarshal(body, &instruction); err != nil {
+		h.utils.response400WithDetails(w, err.Error())
+		return
+	}
+
+	data, err = h.recipeService.UpdateInstruction(instruction, uint(rID))
+	if err != nil {
+		h.utils.response500WithDetails(w, err.Error())
+		return
+	}
+
+	h.utils.respondWithJSON(w, http.StatusOK, data)
+}
+
+func (h RecipeHandlers) DeleteInstruction(w http.ResponseWriter, r *http.Request, recipeID string) {
+	var instruction m.Instruction
+
+	rID, err := strconv.Atoi(recipeID)
+	if err != nil {
+		h.utils.response500(w)
+		return
+	}
+
+	body, err := h.utils.getBody(r.Body)
+	if err != nil {
+		h.utils.response400WithDetails(w, err.Error())
+		return
+	}
+
+	if err = json.Unmarshal(body, &instruction); err != nil {
+		h.utils.response400WithDetails(w, err.Error())
+		return
+	}
+
+	err = h.recipeService.DeleteInstruction(instruction, uint(rID))
 	if err != nil {
 		h.utils.response500WithDetails(w, err.Error())
 		return
