# internal/models/RecipeModels.go
@@ -21,9 +21,9 @@ type Recipe struct {
 // Instruction struct to hold instruction data
 type Instruction struct {
 	gorm.Model
-	RecipeID    uint   `json:"RecipeID" example:"1"`
-	Recipe      Recipe `gorm:"references:ID" json:"-"`
-	StepNumber  int    `json:"StepNumber" example:"1"`
+	RecipeID uint   `json:"RecipeID" example:"1"`
+	Recipe   Recipe `gorm:"references:ID" json:"-"`
+	// StepNumber  int    `json:"StepNumber" example:"1"` // TODO introduce later
 	Description string `json:"Description" example:"lorem ipsum dolor sit amet"`
 }
 
